--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0"
   },
@@ -30,6 +31,7 @@
     "@babel/core": "^7.20.0",
     "@react-native-community/cli-types": "^13.2.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-modals": "^0.22.4",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
