--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@shopify/flash-list": "1.4.3",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-asset": "^8.10.1",
     "expo-av": "~13.4.1",
+    "expo-dev-client": "~2.4.12",
     "expo-font": "11.4.0",
     "expo-media-library": "~15.4.1",
     "expo-secure-store": "~12.3.1",
@@ -27,7 +29,8 @@
     "react-native": "0.72.6",
     "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
